@@ -15,9 +15,9 @@ package org.openhab.binding.freeboxos.internal.handler;
 import static org.openhab.binding.freeboxos.internal.FreeboxOsBindingConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.freeboxos.internal.action.RepeaterActions;
@@ -104,7 +104,7 @@ public class RepeaterHandler extends HostHandler implements FreeDeviceIntf {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(RepeaterActions.class);
+        return Set.of(RepeaterActions.class);
     }
 
     @Override
